namespace Vista
{
    partial class frmStockyValores
    {
        /// <summary>
        /// Required designer variable.
        /// </summary>
        private System.ComponentModel.IContainer components = null;

        /// <summary>
        /// Clean up any resources being used.
        /// </summary>
        /// <param name="disposing">true if managed resources should be disposed; otherwise, false.</param>
        protected override void Dispose(bool disposing)
        {
            if (disposing && (components != null))
            {
                components.Dispose();
            }
            base.Dispose(disposing);
        }

        #region Windows Form Designer generated code

        /// <summary>
        /// Required method for Designer support - do not modify
        /// the contents of this method with the code editor.
        /// </summary>
        private void InitializeComponent()
        {
            this.lblstockyvalores = new System.Windows.Forms.Label();
            this.lblstock = new System.Windows.Forms.Label();
            this.lblprecios = new System.Windows.Forms.Label();
            this.lblbisagras = new System.Windows.Forms.Label();
            this.lblcorrederas = new System.Windows.Forms.Label();
            this.cmbstockbisagras = new System.Windows.Forms.ComboBox();
            this.cmbstockcorrederas = new System.Windows.Forms.ComboBox();
            this.lblstockbisagras = new System.Windows.Forms.Label();
            this.lblstockcorrederas = new System.Windows.Forms.Label();
            this.textBox1 = new System.Windows.Forms.TextBox();
            this.textBox2 = new System.Windows.Forms.TextBox();
            this.lblingresarstock = new System.Windows.Forms.Label();
            this.btnsumarstock = new System.Windows.Forms.Button();
            this.cmbpreciovidrios = new System.Windows.Forms.ComboBox();
            this.cmbpreciomaderas = new System.Windows.Forms.ComboBox();
            this.lblpvidrios = new System.Windows.Forms.Label();
            this.lblpmaderas = new System.Windows.Forms.Label();
            this.cmbpreciocorrederas = new System.Windows.Forms.ComboBox();
            this.cmbpreciobisagras = new System.Windows.Forms.ComboBox();
            this.lblpcorrederas = new System.Windows.Forms.Label();
            this.lblpbisagras = new System.Windows.Forms.Label();
            this.lblpreciocorrederas = new System.Windows.Forms.Label();
            this.lblprecioisagras = new System.Windows.Forms.Label();
            this.lblpreciovidrios = new System.Windows.Forms.Label();
            this.lblpreciomaderas = new System.Windows.Forms.Label();
            this.label1 = new System.Windows.Forms.Label();
            this.textBox3 = new System.Windows.Forms.TextBox();
            this.textBox4 = new System.Windows.Forms.TextBox();
            this.textBox5 = new System.Windows.Forms.TextBox();
            this.textBox6 = new System.Windows.Forms.TextBox();
            this.label2 = new System.Windows.Forms.Label();
            this.btnmodificarprecios = new System.Windows.Forms.Button();
            this.btnsalir = new System.Windows.Forms.Button();
            this.SuspendLayout();
            // 
            // lblstockyvalores
            // 
            this.lblstockyvalores.AutoSize = true;
            this.lblstockyvalores.Location = new System.Drawing.Point(300, 45);
            this.lblstockyvalores.Name = "lblstockyvalores";
            this.lblstockyvalores.Size = new System.Drawing.Size(197, 13);
            this.lblstockyvalores.TabIndex = 0;
            this.lblstockyvalores.Text = "Gestion de stock y valores de materiales";
            // 
            // lblstock
            // 
            this.lblstock.AutoSize = true;
            this.lblstock.Location = new System.Drawing.Point(51, 82);
            this.lblstock.Name = "lblstock";
            this.lblstock.Size = new System.Drawing.Size(33, 13);
            this.lblstock.TabIndex = 1;
            this.lblstock.Text = "stock";
            // 
            // lblprecios
            // 
            this.lblprecios.AutoSize = true;
            this.lblprecios.Location = new System.Drawing.Point(51, 197);
            this.lblprecios.Name = "lblprecios";
            this.lblprecios.Size = new System.Drawing.Size(42, 13);
            this.lblprecios.TabIndex = 2;
            this.lblprecios.Text = "Precios";
            // 
            // lblbisagras
            // 
            this.lblbisagras.AutoSize = true;
            this.lblbisagras.Location = new System.Drawing.Point(51, 118);
            this.lblbisagras.Name = "lblbisagras";
            this.lblbisagras.Size = new System.Drawing.Size(47, 13);
            this.lblbisagras.TabIndex = 3;
            this.lblbisagras.Text = "Bisagras";
            // 
            // lblcorrederas
            // 
            this.lblcorrederas.AutoSize = true;
            this.lblcorrederas.Location = new System.Drawing.Point(51, 154);
            this.lblcorrederas.Name = "lblcorrederas";
            this.lblcorrederas.Size = new System.Drawing.Size(58, 13);
            this.lblcorrederas.TabIndex = 4;
            this.lblcorrederas.Text = "Correderas";
            // 
            // cmbstockbisagras
            // 
            this.cmbstockbisagras.FormattingEnabled = true;
            this.cmbstockbisagras.Location = new System.Drawing.Point(128, 110);
            this.cmbstockbisagras.Name = "cmbstockbisagras";
            this.cmbstockbisagras.Size = new System.Drawing.Size(135, 21);
            this.cmbstockbisagras.TabIndex = 5;
            // 
            // cmbstockcorrederas
            // 
            this.cmbstockcorrederas.FormattingEnabled = true;
            this.cmbstockcorrederas.Location = new System.Drawing.Point(128, 146);
            this.cmbstockcorrederas.Name = "cmbstockcorrederas";
            this.cmbstockcorrederas.Size = new System.Drawing.Size(135, 21);
            this.cmbstockcorrederas.TabIndex = 6;
            // 
            // lblstockbisagras
            // 
            this.lblstockbisagras.AutoSize = true;
            this.lblstockbisagras.Location = new System.Drawing.Point(281, 113);
            this.lblstockbisagras.Name = "lblstockbisagras";
            this.lblstockbisagras.Size = new System.Drawing.Size(62, 13);
            this.lblstockbisagras.TabIndex = 7;
            this.lblstockbisagras.Text = "stockactual";
            // 
            // lblstockcorrederas
            // 
            this.lblstockcorrederas.AutoSize = true;
            this.lblstockcorrederas.Location = new System.Drawing.Point(281, 149);
            this.lblstockcorrederas.Name = "lblstockcorrederas";
            this.lblstockcorrederas.Size = new System.Drawing.Size(62, 13);
            this.lblstockcorrederas.TabIndex = 8;
            this.lblstockcorrederas.Text = "stockactual";
            // 
            // textBox1
            // 
            this.textBox1.Location = new System.Drawing.Point(365, 110);
            this.textBox1.Name = "textBox1";
            this.textBox1.Size = new System.Drawing.Size(81, 20);
            this.textBox1.TabIndex = 9;
            // 
            // textBox2
            // 
            this.textBox2.Location = new System.Drawing.Point(365, 146);
            this.textBox2.Name = "textBox2";
            this.textBox2.Size = new System.Drawing.Size(81, 20);
            this.textBox2.TabIndex = 10;
            // 
            // lblingresarstock
            // 
            this.lblingresarstock.AutoSize = true;
            this.lblingresarstock.Location = new System.Drawing.Point(362, 82);
            this.lblingresarstock.Name = "lblingresarstock";
            this.lblingresarstock.Size = new System.Drawing.Size(84, 13);
            this.lblingresarstock.TabIndex = 11;
            this.lblingresarstock.Text = "Stock a ingresar";
            // 
            // btnsumarstock
            // 
            this.btnsumarstock.Location = new System.Drawing.Point(485, 118);
            this.btnsumarstock.Name = "btnsumarstock";
            this.btnsumarstock.Size = new System.Drawing.Size(120, 34);
            this.btnsumarstock.TabIndex = 12;
            this.btnsumarstock.Text = "Sumar Stock";
            this.btnsumarstock.UseVisualStyleBackColor = true;
            // 
            // cmbpreciovidrios
            // 
            this.cmbpreciovidrios.FormattingEnabled = true;
            this.cmbpreciovidrios.Location = new System.Drawing.Point(198, 271);
            this.cmbpreciovidrios.Name = "cmbpreciovidrios";
            this.cmbpreciovidrios.Size = new System.Drawing.Size(135, 21);
            this.cmbpreciovidrios.TabIndex = 16;
            // 
            // cmbpreciomaderas
            // 
            this.cmbpreciomaderas.FormattingEnabled = true;
            this.cmbpreciomaderas.Location = new System.Drawing.Point(198, 235);
            this.cmbpreciomaderas.Name = "cmbpreciomaderas";
            this.cmbpreciomaderas.Size = new System.Drawing.Size(135, 21);
            this.cmbpreciomaderas.TabIndex = 15;
            // 
            // lblpvidrios
            // 
            this.lblpvidrios.AutoSize = true;
            this.lblpvidrios.Location = new System.Drawing.Point(51, 274);
            this.lblpvidrios.Name = "lblpvidrios";
            this.lblpvidrios.Size = new System.Drawing.Size(123, 13);
            this.lblpvidrios.TabIndex = 14;
            this.lblpvidrios.Text = "Vidrios x metro cuadrado";
            // 
            // lblpmaderas
            // 
            this.lblpmaderas.AutoSize = true;
            this.lblpmaderas.Location = new System.Drawing.Point(51, 238);
            this.lblpmaderas.Name = "lblpmaderas";
            this.lblpmaderas.Size = new System.Drawing.Size(73, 13);
            this.lblpmaderas.TabIndex = 13;
            this.lblpmaderas.Text = "Maderas x pie";
            // 
            // cmbpreciocorrederas
            // 
            this.cmbpreciocorrederas.FormattingEnabled = true;
            this.cmbpreciocorrederas.Location = new System.Drawing.Point(198, 346);
            this.cmbpreciocorrederas.Name = "cmbpreciocorrederas";
            this.cmbpreciocorrederas.Size = new System.Drawing.Size(135, 21);
            this.cmbpreciocorrederas.TabIndex = 20;
            // 
            // cmbpreciobisagras
            // 
            this.cmbpreciobisagras.FormattingEnabled = true;
            this.cmbpreciobisagras.Location = new System.Drawing.Point(198, 310);
            this.cmbpreciobisagras.Name = "cmbpreciobisagras";
            this.cmbpreciobisagras.Size = new System.Drawing.Size(135, 21);
            this.cmbpreciobisagras.TabIndex = 19;
            // 
            // lblpcorrederas
            // 
            this.lblpcorrederas.AutoSize = true;
            this.lblpcorrederas.Location = new System.Drawing.Point(51, 349);
            this.lblpcorrederas.Name = "lblpcorrederas";
            this.lblpcorrederas.Size = new System.Drawing.Size(101, 13);
            this.lblpcorrederas.TabIndex = 18;
            this.lblpcorrederas.Text = "Correderas x unidad";
            // 
            // lblpbisagras
            // 
            this.lblpbisagras.AutoSize = true;
            this.lblpbisagras.Location = new System.Drawing.Point(51, 313);
            this.lblpbisagras.Name = "lblpbisagras";
            this.lblpbisagras.Size = new System.Drawing.Size(90, 13);
            this.lblpbisagras.TabIndex = 17;
            this.lblpbisagras.Text = "Bisagras x unidad";
            // 
            // lblpreciocorrederas
            // 
            this.lblpreciocorrederas.AutoSize = true;
            this.lblpreciocorrederas.Location = new System.Drawing.Point(351, 349);
            this.lblpreciocorrederas.Name = "lblpreciocorrederas";
            this.lblpreciocorrederas.Size = new System.Drawing.Size(58, 13);
            this.lblpreciocorrederas.TabIndex = 24;
            this.lblpreciocorrederas.Text = "Correderas";
            // 
            // lblprecioisagras
            // 
            this.lblprecioisagras.AutoSize = true;
            this.lblprecioisagras.Location = new System.Drawing.Point(351, 313);
            this.lblprecioisagras.Name = "lblprecioisagras";
            this.lblprecioisagras.Size = new System.Drawing.Size(47, 13);
            this.lblprecioisagras.TabIndex = 23;
            this.lblprecioisagras.Text = "Bisagras";
            // 
            // lblpreciovidrios
            // 
            this.lblpreciovidrios.AutoSize = true;
            this.lblpreciovidrios.Location = new System.Drawing.Point(351, 274);
            this.lblpreciovidrios.Name = "lblpreciovidrios";
            this.lblpreciovidrios.Size = new System.Drawing.Size(38, 13);
            this.lblpreciovidrios.TabIndex = 22;
            this.lblpreciovidrios.Text = "Vidrios";
            // 
            // lblpreciomaderas
            // 
            this.lblpreciomaderas.AutoSize = true;
            this.lblpreciomaderas.Location = new System.Drawing.Point(351, 238);
            this.lblpreciomaderas.Name = "lblpreciomaderas";
            this.lblpreciomaderas.Size = new System.Drawing.Size(48, 13);
            this.lblpreciomaderas.TabIndex = 21;
            this.lblpreciomaderas.Text = "Maderas";
            // 
            // label1
            // 
            this.label1.AutoSize = true;
            this.label1.Location = new System.Drawing.Point(351, 197);
            this.label1.Name = "label1";
            this.label1.Size = new System.Drawing.Size(63, 13);
            this.label1.TabIndex = 25;
            this.label1.Text = "Valor actual";
            // 
            // textBox3
            // 
            this.textBox3.Location = new System.Drawing.Point(449, 235);
            this.textBox3.Name = "textBox3";
            this.textBox3.Size = new System.Drawing.Size(62, 20);
            this.textBox3.TabIndex = 26;
            // 
            // textBox4
            // 
            this.textBox4.Location = new System.Drawing.Point(449, 271);
            this.textBox4.Name = "textBox4";
            this.textBox4.Size = new System.Drawing.Size(62, 20);
            this.textBox4.TabIndex = 27;
            // 
            // textBox5
            // 
            this.textBox5.Location = new System.Drawing.Point(449, 342);
            this.textBox5.Name = "textBox5";
            this.textBox5.Size = new System.Drawing.Size(62, 20);
            this.textBox5.TabIndex = 29;
            // 
            // textBox6
            // 
            this.textBox6.Location = new System.Drawing.Point(449, 306);
            this.textBox6.Name = "textBox6";
            this.textBox6.Size = new System.Drawing.Size(62, 20);
            this.textBox6.TabIndex = 28;
            // 
            // label2
            // 
            this.label2.AutoSize = true;
            this.label2.Location = new System.Drawing.Point(446, 197);
            this.label2.Name = "label2";
            this.label2.Size = new System.Drawing.Size(65, 13);
            this.label2.TabIndex = 30;
            this.label2.Text = "Nuevo valor";
            // 
            // btnmodificarprecios
            // 
            this.btnmodificarprecios.Location = new System.Drawing.Point(551, 274);
            this.btnmodificarprecios.Name = "btnmodificarprecios";
            this.btnmodificarprecios.Size = new System.Drawing.Size(120, 34);
            this.btnmodificarprecios.TabIndex = 31;
            this.btnmodificarprecios.Text = "Modificar Precios";
            this.btnmodificarprecios.UseVisualStyleBackColor = true;
            // 
            // btnsalir
            // 
            this.btnsalir.Location = new System.Drawing.Point(629, 404);
            this.btnsalir.Name = "btnsalir";
            this.btnsalir.Size = new System.Drawing.Size(120, 34);
            this.btnsalir.TabIndex = 32;
            this.btnsalir.Text = "Salir";
            this.btnsalir.UseVisualStyleBackColor = true;
            this.btnsalir.Click += new System.EventHandler(this.btnsalir_Click);
            // 
            // frmStockyValores
            // 
            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
            this.ClientSize = new System.Drawing.Size(800, 450);
            this.Controls.Add(this.btnsalir);
            this.Controls.Add(this.btnmodificarprecios);
            this.Controls.Add(this.label2);
            this.Controls.Add(this.textBox5);
            this.Controls.Add(this.textBox6);
            this.Controls.Add(this.textBox4);
            this.Controls.Add(this.textBox3);
            this.Controls.Add(this.label1);
            this.Controls.Add(this.lblpreciocorrederas);
            this.Controls.Add(this.lblprecioisagras);
            this.Controls.Add(this.lblpreciovidrios);
            this.Controls.Add(this.lblpreciomaderas);
            this.Controls.Add(this.cmbpreciocorrederas);
            this.Controls.Add(this.cmbpreciobisagras);
            this.Controls.Add(this.lblpcorrederas);
            this.Controls.Add(this.lblpbisagras);
            this.Controls.Add(this.cmbpreciovidrios);
            this.Controls.Add(this.cmbpreciomaderas);
            this.Controls.Add(this.lblpvidrios);
            this.Controls.Add(this.lblpmaderas);
            this.Controls.Add(this.btnsumarstock);
            this.Controls.Add(this.lblingresarstock);
            this.Controls.Add(this.textBox2);
            this.Controls.Add(this.textBox1);
            this.Controls.Add(this.lblstockcorrederas);
            this.Controls.Add(this.lblstockbisagras);
            this.Controls.Add(this.cmbstockcorrederas);
            this.Controls.Add(this.cmbstockbisagras);
            this.Controls.Add(this.lblcorrederas);
            this.Controls.Add(this.lblbisagras);
            this.Controls.Add(this.lblprecios);
            this.Controls.Add(this.lblstock);
            this.Controls.Add(this.lblstockyvalores);
            this.Name = "frmStockyValores";
            this.Text = "Form1";
            this.Load += new System.EventHandler(this.frmStock_Load);
            this.ResumeLayout(false);
            this.PerformLayout();

        }

        #endregion

        private System.Windows.Forms.Label lblstockyvalores;
        private System.Windows.Forms.Label lblstock;
        private System.Windows.Forms.Label lblprecios;
        private System.Windows.Forms.Label lblbisagras;
        private System.Windows.Forms.Label lblcorrederas;
        private System.Windows.Forms.ComboBox cmbstockbisagras;
        private System.Windows.Forms.ComboBox cmbstockcorrederas;
        private System.Windows.Forms.Label lblstockbisagras;
        private System.Windows.Forms.Label lblstockcorrederas;
        private System.Windows.Forms.TextBox textBox1;
        private System.Windows.Forms.TextBox textBox2;
        private System.Windows.Forms.Label lblingresarstock;
        private System.Windows.Forms.Button btnsumarstock;
        private System.Windows.Forms.ComboBox cmbpreciovidrios;
        private System.Windows.Forms.ComboBox cmbpreciomaderas;
        private System.Windows.Forms.Label lblpvidrios;
        private System.Windows.Forms.Label lblpmaderas;
        private System.Windows.Forms.ComboBox cmbpreciocorrederas;
        private System.Windows.Forms.ComboBox cmbpreciobisagras;
        private System.Windows.Forms.Label lblpcorrederas;
        private System.Windows.Forms.Label lblpbisagras;
        private System.Windows.Forms.Label lblpreciocorrederas;
        private System.Windows.Forms.Label lblprecioisagras;
        private System.Windows.Forms.Label lblpreciovidrios;
        private System.Windows.Forms.Label lblpreciomaderas;
        private System.Windows.Forms.Label label1;
        private System.Windows.Forms.TextBox textBox3;
        private System.Windows.Forms.TextBox textBox4;
        private System.Windows.Forms.TextBox textBox5;
        private System.Windows.Forms.TextBox textBox6;
        private System.Windows.Forms.Label label2;
        private System.Windows.Forms.Button btnmodificarprecios;
        private System.Windows.Forms.Button btnsalir;
    }
}